--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 
 //= template/layout/header.html
 
+//= template/layout/sections/goose.html
+
 //= template/layout/footer.html
 
 //= template/modules/modal.html
