Блок провокация (#white_envy)

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 
 //= template/layout/sections/goose.html
 
+//= template/layout/sections/white_envy.html
+
 //= template/layout/footer.html
 
 //= template/modules/modal.html
