--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 
 //= template/layout/sections/white_envy.html
 
+//= template/layout/sections/combustion.html
+
 //= template/layout/footer.html
 
 //= template/modules/modal.html
