#reasonsResult. адаптивка со стрелочками. Биг скрин есть доработки. На смол скринах допились блок "Окружение"

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 
 //= template/layout/sections/combustion.html
 
+//= template/layout/sections/reasonsResult.html
+
 <!--//= template/layout/footer.html-->
 
 //= template/modules/modal.html
