#clubProgramm. wide screen

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 
 //= template/layout/sections/reasonsResult.html
 
+//= template/layout/sections/clubProgram.html
+
 <!--//= template/layout/footer.html-->
 
 //= template/modules/modal.html
