--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 
 //= template/layout/sections/goose.html
 
+//= template/layout/sections/effect.html
+
 //= template/layout/sections/provocation.html
 
 //= template/layout/sections/combustion.html
