--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
 
 //= template/layout/sections/clubProgram.html
 
+//= template/layout/sections/instrumentsResult.html
+
 <!--//= template/layout/footer.html-->
 
 //= template/modules/modal.html
