--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 //= template/layout/sections/combustion.html
 
-<!--//= template/layout/footer.html-->
+//= template/layout/footer.html
 
 //= template/modules/modal.html
 
