--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
 
 //= template/layout/sections/instrumentsResult.html
 
+//= template/layout/sections/clubOrganizer.html
+
 //= template/layout/sections/combustion.html
 
 //= template/layout/footer.html
